syntax = "proto3";

option java_multiple_files = true;
option java_package = "pl.put.srds.emergencies";
option java_outer_classname = "EmergenciesServiceProto";
option objc_class_prefix = "ESP";

package emergenciesservice;

service EmergenciesService {
    // sends request and waits for confirmation
    rpc RequestEmergencies(EmergenciesRequest) returns (EmergenciesRequestConfirmation) {}

    // sends releasing message and waits for confirmation
    rpc ReleaseEmergencies(EmergenciesReleasing) returns (EmergenciesReleasingConfirmation) {}
}

message EmergenciesRequest {
    // amount of requested GBA (średni gaśniczy)
    int32 GBAAmount = 1;

    // amount of requested GCBA (ciężki gaśniczy)
    int32 GCBAAmount = 2;

    // amount of requested GLBA (lekki gaśniczy)
    int32 GLBAAmount = 3;

    // amount of requested SD (drabina)
    int32 SDAmount = 4;

    // amount of requested SCRt (ciężki rat. tech.)
    int32 SCRtAmount = 5;

    // amount of requested SRd (rat. drog.)
    int32 SRdAmount = 6;
}

message EmergenciesRequestConfirmation {
    // UUID generated by CassandraDB
    string RequestId = 1; // consider better type
}

message EmergenciesReleasing {
    // UUID generated by CassandraDB
    string RequestId = 1;
}

message EmergenciesReleasingConfirmation {
    // empty message
}
